# strato

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .swift-format  .worktreeinclude  AGENTS.md  CLAUDE.md  CONTEXT.md  DEPLOYMENT.md  DEV-SETUP.md  Dockerfile  Dockerfile-app  LICENSE.md  NIXOS.md  Package.resolved  Package.swift  Public  README.md  Taskfile.yml  cloud-hypervisor-openapi.yaml  config.toml  config.toml.example  dev-setup.sh  docker-compose.yml  flake.nix  go.mod  go.sum  helm-test-values.yaml  main.go  nginx.dev.conf  package-lock.json  package.json  redocly.yaml  renovate.json  security-fixes.md  skaffold.yaml  strato.paw  tailwind.config.js  tailwind.d  test-config.swift
.claude/: README.md  settings.json  settings.local.json
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
SakeApp/: Package.resolved  Package.swift  Sakefile.swift
SwiftFirecracker/: Package.resolved  Package.swift
agent/: Dockerfile  Package.resolved  Package.swift
cli/: Package.resolved  Package.swift
control-plane/: Dockerfile  Package.resolved  Package.swift  eslint.config.js  package-lock.json  package.json
database/: db.go
docs/: AGENT_AUTHENTICATION.md  ARCHITECTURE.md  SCHEDULER.md  api-reference.md  development-skaffold.md  iam.md  index.md  migration-guide.md  troubleshooting-k8s.md
e2e-test/: control-plane-env.sh
observability/: README.md  otel-collector-config.yaml
permify/: config.yaml  schema.perm
sandbox-guest/init/: Cargo.toml  build-initramfs.sh
sandbox-guest/init/src/: config.rs  identity.rs  lib.rs  logbuf.rs  main.rs  protocol.rs
sandbox-guest/init/src/linux/: exec.rs  logs.rs  mod.rs  mounts.rs  reaper.rs  vsock.rs
(+1526 files in other folders)
