# strato-sandbox-init — the guest init / guest-agent (PID 1) for Strato
# sandboxes (issue #419). Runs inside a Firecracker microVM booted from our
# guest kernel + initramfs; mounts the container rootfs, applies the OCI
# process config, pivot_roots, execs the workload, reaps zombies, and reports
# the exit status over vsock.
#
# License: per the repository LICENSE.md (Functional Source License 1.1).
[package]
name = "strato-sandbox-init"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "Strato sandbox guest init / guest-agent for OCI-image Firecracker microVMs"
publish = false

# The portable protocol/config logic lives in the library so it can be
# unit-tested on any host (macOS/CI). The binary is a Linux-only PID-1 init.
[lib]
name = "strato_sandbox_init"
path = "src/lib.rs"

[[bin]]
name = "strato-sandbox-init"
path = "src/main.rs"

[dependencies]
# base64 payload encoding for exec/log stdio chunks on the vsock protocol (v2).
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Linux syscall surface (mount / pivot_root / exec / wait / AF_VSOCK / PTY).
# Kept target-gated so the crate still builds and tests on non-Linux dev hosts.
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = [
    "mount",
    "process",
    "user",
    "fs",
    "reboot",
    "term",
    "ioctl",
    "signal",
] }
libc = "0.2"

[profile.release]
opt-level = "z"   # optimize for size — this rides in every sandbox's initramfs
lto = true
codegen-units = 1
strip = true
panic = "abort"
